# kabr-tools

./: .gitignore  .zenodo.json  404.html  CITATION.cff  LICENSE  README.md  a.sh  cvat2slowfast.py  cvat2ultralytics.py  detector2cvat.py  index.html  miniscene2behavior.py  mkdocs.yml  player.py  pyproject.toml  requirements.txt  sitemap.xml  tracks_extractor.py
.github/workflows/: cvat2slowfast.yml  cvat2ultralytics.yml  deploy-docs.yaml  detector2cvat.yml  macos.yml  miniscene2behavior.yml  player.yml  test.yml  tracks_extractor.yml  ubuntu.yml  windows.yml
acknowledgements/: index.html
case_studies/0_time_budget/data/: index.html
case_studies/0_time_budget/time_budget/: index.html
case_studies/1_grevys_landscape/data/: index.html
case_studies/1_grevys_landscape/grevys_landscape_graphs/: index.html
case_studies/1_grevys_landscape/grevys_landscape_lr/: index.html
case_studies/2_zebra_transition/behaviortransitionsheatmap/: index.html
case_studies/2_zebra_transition/data/: index.html
case_studies/3_mixed_species_social/data/: index.html
case_studies/3_mixed_species_social/mixed_species_overlap/: index.html
case_studies/overview/: index.html
cvat/cvat-data-management/: index.html
cvat/cvat-guide/: index.html
data/: classes.json  old2new.json
docs/: acknowledgements.md  index.md  pipeline.md
docs/case_studies/: overview.md
docs/cvat/: cvat-data-management.md  cvat-guide.md
docs/methodology_comparison/: overview.md
docs/pipeline/: analysis.md  behavior-labeling.md  data-collection.md  optional-steps.md  overview.md  preprocessing.md  worked-example.md
ethogram/: classes.json  label2index.json  old2new.json  yolo_equiv.json  yolo_labels.json
helper_scripts/: cleaner.ipynb  downgrade.sh  rename.sh
helper_scripts/annotate_mini_scenes/: README  README.md  annotate.py  launch_job.py  launch_jobs.py  run.sh
helper_scripts/mini-scenes/: annotate.py  config.yml  files.py  run.sh  slurm-31002767.out  slurm-31002770.out  slurm-31002776.out  slurm-31002778.out  slurm-31002780.out  slurm-31002786.out  slurm-31002798.out  slurm-31002806.out
methodology_comparison/kabr_dataset/data/: index.html
methodology_comparison/kabr_dataset/data_analysis/: index.html
methodology_comparison/overview/: index.html
notebooks/: annotation_rescale.ipynb  create_time_budget_from_annoated_miniscene.ipynb  extract_tracks_from_downgraded_video.ipynb
pipeline/: index.html
pipeline/analysis/: index.html
pipeline/behavior-labeling/: index.html
pipeline/data-collection/: index.html
pipeline/optional-steps/: index.html
pipeline/overview/: index.html
pipeline/preprocessing/: index.html
pipeline/worked-example/: index.html
pr-107/: index.html  sitemap.xml
pr-107/cvat/cvat-data-management/: index.html
pr-107/cvat/cvat-guide/: index.html
pr-107/methodology_comparison/overview/: index.html
pr-107/pipeline/analysis/: index.html
pr-107/pipeline/behavior-labeling/: index.html
pr-107/pipeline/data-collection/: index.html
pr-107/pipeline/overview/: index.html
pr-107/search/: search_index.json
pr-108/: index.html
pr-108/case_studies/overview/: index.html
pr-108/cvat/cvat-data-management/: index.html
pr-108/methodology_comparison/overview/: index.html
pr-108/pipeline/optional-steps/: index.html
pr-108/pipeline/worked-example/: index.html
pr-109/: sitemap.xml
pr-109/cvat/cvat-guide/: index.html
pr-109/pipeline/analysis/: index.html
pr-109/pipeline/behavior-labeling/: index.html
pr-109/pipeline/data-collection/: index.html
pr-110/acknowledgements/: index.html
pr-110/cvat/cvat-data-management/: index.html
pr-110/pipeline/behavior-labeling/: index.html
pr-110/pipeline/data-collection/: index.html
pr-110/pipeline/preprocessing/: index.html
pr-110/search/: search_index.json
pr-111/: index.html  sitemap.xml
pr-111/pipeline/analysis/: index.html
pr-111/pipeline/behavior-labeling/: index.html
pr-111/pipeline/overview/: index.html
pr-111/pipeline/worked-example/: index.html
pr-112/: sitemap.xml
pr-112/case_studies/overview/: index.html
pr-112/cvat/cvat-data-management/: index.html
pr-112/pipeline/optional-steps/: index.html
pr-113/: sitemap.xml
pr-113/pipeline/data-collection/: index.html
pr-113/search/: search_index.json
pr-114/: index.html  sitemap.xml
pr-114/acknowledgements/: index.html
pr-114/case_studies/overview/: index.html
pr-114/cvat/cvat-data-management/: index.html
pr-114/cvat/cvat-guide/: index.html
pr-114/pipeline/analysis/: index.html
pr-114/pipeline/behavior-labeling/: index.html
pr-114/search/: search_index.json
pr-117/: 404.html
pr-118/: sitemap.xml
pr-121/: sitemap.xml
pr-121/acknowledgements/: index.html
pr-121/stylesheets/: extra.css
pr-123/: sitemap.xml
pr-124/: sitemap.xml
pr-127/: sitemap.xml
pr-128/: sitemap.xml
pr-129/: sitemap.xml
pr-85/: sitemap.xml
pr-86/: index.html
pr-87/: sitemap.xml
pr-93/: sitemap.xml
pr-95/: 404.html  sitemap.xml
search/: search_index.json
src/kabr_tools/: __init__.py  __main__.py  cvat2slowfast.py  cvat2ultralytics.py  detector2cvat.py  miniscene2behavior.py  player.py  tracks_extractor.py
tests/: test_cvat2slowfast.py  test_cvat2ultralytics.py  test_detector2cvat.py  test_miniscene2behavior.py  test_player.py  test_tracks_extractor.py  test_yolo.py  utils.py
tests/dataset/: README.md
tests/detection_example/: DJI_0068.csv
tests/examples/: DJI_0068.csv  README.md
tests/utils/: test_yolo.py
(+207 files in other folders)
